tooling/nargo_cli/tests/snapshots/execution_success/regression_bignum/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "pZXbisMgEED/xec8ONZrf2VZik1tEcQEmxSW0n9fGzKmFBaW6ZPRyTljyDje2Skc58sh5vNwZfuvOzuWmFK8HNLQ+ykOua7eHx3D6WEqIdQl9hKv1OhLyBPb5zmljt18mpeXrqPPyzj5UqO8YyGf6liF55jC8+nRbTT/G5UCYSlFw9X/edt45wi8BrHyGnYUXinklabwxiFvOYV3sPKGSwJvuEEeFIUHi/wOPstP4q1A3gpL4aVGXhoKb7D+rCXtX7f8llL/1iHvOCW/E1i/TlLqH7jGAgBuKH8AgOMRBABBM8BmcCSDlM0gFclgN4Oj7aG1kiqj9AIQrZmCkEAyqF0zkOqxYmozaJJBb1/xdqa+68z3sbzfYjdfoj+msE7Pc+5fotPPiBG8Bccy9OE0l/A0LbHq/gU=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
