tooling/nargo_cli/tests/snapshots/execution_success/regression_bignum/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : []"
  ],
  "debug_symbols": "pZXNjsIgEIDfhXMPDPLrq2w2BisaEkIbbE02xndfNA51Teph9kRh+n2UDgNXdgj7+bSL+Tic2fbryvYlphRPuzT0fopDrqPXW8ewu5tKCHWIvcQrNfoS8sS2eU6pYxef5sdL59HnRzv5UqO8YyEfaluFx5jC/enWLTRfR6VAWErRcPWXh3XeCvPkrbAUXmrkpaHwBr/fWqDwus1vSet3yDtOmd8JhbzcrPGf8mdb/pxb4+06D1zbpwC4sRQDcIEGAEEzwGIgrQKkbAapSAa7GGh/EpRqBsspBtGKEYQEkkEvBkszWLUYNMmgNotBEPa0BtxQGig1oVsitNIU3jjk1/P4iXe4nQ2XBN5wPFMNKAoPWNJmA/+b/43/rj3fx/J+i118iX6fwrN7nHP/Ep1+RozgLTiWoQ+HuYS76RGr7l8=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
