tooling/nargo_cli/tests/snapshots/execution_success/regression_bignum/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "pZXNjsIgEIDfhXMPDPIz+CqbjcGKhoTQBluTjfHdF41Q16QeZk8Upt/H0IFyZQe/n0+7kI7DmW2/rmyfQ4zhtItD76YwpDJ6vXWsdndT9r4MsZd4oUaXfZrYNs0xduzi4vx46Ty69Ggnl0uUd8ynQ2mL8Biivz/duoXm66gUFZZSNFz95WGdR2GePAqk8FJXXhoKb2r+iEDhdZsfSeu3lbecMr8VqvJys8Z/qh+2+lm7xuM6D1zjUwDcIMUAXFQDgKAZYDGQVgFSNoNUJAMuBtqXBKWaATnFINphBCGBZMCWg0BNMuglB6TloDaLQRD2tIa6oTRQzoRuhdBKU3hjK79ex0+8rdvZcEngDa//VAOKwkM90mYD/5v/jf8uPdeH/H6LXVwObh/9s3ucU/8SnX7GGqm34JiH3h/m7O+mR6y4fwE=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
