tooling/nargo_cli/tests/snapshots/execution_success/regression_bignum/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1ay47rRBBtJ3YmD0aJuEjsr8QCsbFj5wUSGkTgXtiwgg1sPE684iP8F0iID2DPCokFEisklgjxK0gsmB66xicnFSdz0x4GaUqK/OjqU9XVVeXq7gSmpsBdQ3MGCcgLdzNwzx1o7978rtxzfB4lA5LrE38ZZ/lAGZ9H/dOBwwzawY8FvyX7xxcO59OqxsexiNz+zW8E989M7R9tjV/mr83xP2sYs/jOh1V7c2tpDfhhC/gfAb4x/mP343bsc4f/oh38meC/bAd/LviftIKfFjYebSx+4fC0WDzLn/JyXhbbPMkX+fV0U2ixeBb+toiLPC7ifFNs09lqADbygr+cbdJyURTTm5ttOh0Aphf8zWY2LbI8T8vNdpXOBT/yhQ80L7f5pcPsmZoCmvsL04avxYuA5BmaJ0Pyh6Sr79wQkDzRh+0jviq26yu6TpS2gO77ipy+IkfD6njE6nrECj1iRZ6wLK2rf68t11YL8Qn0ISHNX9CXmbr0jHpbjK8Al/mEvOfvXSpkTB1FvpZ7/4v8Ie+GptW67y5/dEkftg/nj1DRdWL0eML7UJETKnImStu6esJ6FayWfTq7VGQLSRvmRfRlJi1/yDubP74GXOZjmeh7nJc1f0cMqbXHRo8/DSt0P46dtcOKiP8zd9XqMZ/rq9cB1xg9Ro/Z4+U97BHc0x7C/znZoyV/Ve0hskamXu+GlX/5i2Uci9wu2IH9HuVHxP+lex4q4zjnO1ku8qRM8zKf5ZtNVuRsJ0sdsJO25nosOSZQdBc6lmN+AFzmY5kYB9EjtcU5+fZPwGU+lqnlW/aTS7Ofb7j2aikPnlx7ifyhaXUek6ZvPNqHa69I0XVCbZbWVc3HbV3lXecJyzuWFqvBgavI4XeHajz0k1PiKqJ+V+45Po9OjiuR/1Bxpc1fU1z1FF0n1GZpXdV83Na09/KE5Q+Lc6Hga1eRw+8Oxa8WV1i/yjmI1esb6IP9pKbjvlJH81rgO1Njfuvux4BrzP53dWz244hrIG1fULOBvNf2q3AvtUO6Ycz0qQ378Xpj0CBH02uo8A8a9ML9qiFhoZywYRysa+8Av+BFxP+9u1q8587oUkdJLY/z1+a6w+Zpq8dboAfHVlTtjlvzBS1Om+ZU2/+dmP35uyCsY/tRctamxa7oqNXogouxe2p9+qp5BbEkdxzLKz8CLsbPqXlF+H8yNeYfBzBRRzxj5PmNAEvT4QXpIPw/u6u183uBjonjChvGJfy/AOb7hKl9X5pyXtPZCeozNvu+xn7bg/FIv3VV8+B4kf83d7XPvxKmtj7QYkHz9xBw2afEJh1Tzz+e0UrfluvHOCC9Q7Nfb3MMIP/vNK4LsBXPv/Yt6ily0SfEJjxnItf64AdOAMc8ysYY1L7tuAeFOYlzojYu1JNj61R+GVfH6Osd5uf8wePpgfxDcxk09Gd/6x7oi/e8F2Hg/rGug4J29GlcB2n58Gkd9P/D8rkOGhj923flnuPzaO+/CkOj19Nhgz6BN32yu++O1Kh4HoE5pkftwv+Xu9rndbCro1avYR14qF77GzClrtHWDJjTLIXQ1vaaAeuRiHTSfFo7r2TbIz//V8aS9l8L/t9K0/clUDD5/27Ij3XTfeav7wRhravV+lKzWfzhCb7DdtNkj4Ma89Ldn7qHECrtTXPadP4n89I7wM/xJPxvgO2eBzom2gT14vkQ/jcBsymeMOdYCqvd8V259/F5pMYT1pocT037MZbuuwYXm00U/nW129a0zvG1JhHf932Wmc3yRZEvkmSVJdssmR07yxyLThWMq9rtc+GeZZ3A/IIXEf/bEJfvkA9GijzL924DX3DgeouhvAur3XeDap+/W+3zi+xhta+jtI2gDX3X0mvuGe2FWKJHRPwLyF2W+tBH+k8U+X2Sv6O38o7PRUcK/0jht/MTk9/i2H3X8LcyCR/fsW7iOyPjP66my+V8Nb2Os8WmKDdZeiyufMsvZvPr4ia4421yq85Dy59n82S5zJfFvChXWXH94ONfzctVml4n6WqzXSXzY/L/AfOTf/YZNQAA",
  "debug_symbols": "pZjRbuJADEX/Jc88ZGyPZ2Z/paoq2qYVEgJEYaVVxb+vHeeG9mGl1fSFe1LwSZpcJsDn8Do9X9+fdoe348fw6+FzeD7v9vvd+9P++LK97I4H++vnMPoD2WPaDJQiKIIjJCJHaESJqBFtDg4Lh4XDwmHhsHBYOCwcFg4Lh0XCImERs5AFR0hEjtCIEmEWtmhz5DEiRVAER0hEjtCIEhGWHBYNi4ZFw6Jh0bBoWNQsYlEiakSbo4wRKYIizJItJMIsaqERJaJGmKVshjpGmKVaUARHyBzNtpqFROQIjSgRNaLNkUY/2aNDAhCAAQLIAAX4JbOrlNIISAACMEAAGaCAAqgAmAlmgplgJpgJZoKZYCaYCea5rNaXNNd1hgQgAAMEkAEKKIAKgFlgFpgFZoFZYBaYBWaBWWD2Gid28ClxUPzFX5wdKqAt4O0N8HF1IAADXFgcMkABBVCXnXqfZ/BGByQAARiAQ/VuB+gCXuVUHRKAAP5ib2a1nZJ3rLYF2ghIAAIwQAC+RPjl9voHFICb7aySd57YQQAZoIACqIC2gHc+AB7vfACEXmwSBx/PDm0BL3aAj6sDARjgnuKQAQoogApoC3ixAxKAAAyAmWFmmBlmhplhFpgFZoF5XqGrgwAyQAEFUAFtAV+vAxLAzc2BAQLIAAUUQAW0BeY1fHRIAAIwQAG+7s/3N7zYi83eFi92gAAywMf9cvvCHVABEHrnAxKAAAwQQAYowM3pdtsMuHs/Xc7T5DfvL7dzu8mftufpcBl+Ha77/Wb4vd1f5xd9nLaHOS/bsz1r/9l0eLU04dtuPzndNvfp8d+jyc/qPGwr6Dqe/39eFPNaOubJV/F53t5vPfOyzpeu/Tda5nlMP5zXjnkmXDym9rN5lo55WedFes6/1HW+9Ry/Jpw/TdwznzPmc8/514L+a+3pvzb0r4w957+MBfMp98z7fTbmOf1s/13zlTBfqfbMr+tHlZ73by3oX61dx6/r/mtP/2vDfOtaPxqhv016+m+f3lGANJaeK2Cf9vEWtM/71GdId0PrMoisBsldhno3tL5jWJcSk3XdC2ldTO1LTOoyZF4NXX2070r3Y6h9x1Dz3fB9TX20re3L7vztR4ebu8677fN+WjbfroeXL89e/pzwDH60OJ2PL9Pr9Ty56f7LhT08UOMNJ3n0L6S2WXXTkm/YB60Hti9AnMrjzQ/lLw==",
  "file_map": {
    "50": {
      "source": "fn main() {\n    let numerator =\n        [790096867046896348, 1063071665130103641, 602707730209562162, 996751591622961462, 28650, 0];\n    unsafe { __udiv_mod(numerator) };\n\n    let denominator = [12, 0, 0, 0, 0, 0];\n    let result = unsafe { __validate_gt_remainder(denominator) };\n    assert(result[4] == 0);\n    assert(result[5] == 0);\n}\n\nunconstrained fn __udiv_mod(remainder_u60: [u64; 6]) {\n    let bit_difference = get_msb(remainder_u60);\n    let accumulator_u60: [u64; 6] = shl(bit_difference);\n}\n\nunconstrained fn __validate_gt_remainder(a_u60: [u64; 6]) -> [u64; 6] {\n    let mut addend_u60: [u64; 6] = [0; 6];\n    let mut result_u60: [u64; 6] = [0; 6];\n\n    for i in 0..6 {\n        result_u60[i] = a_u60[i] + addend_u60[i];\n    }\n\n    result_u60\n}\n\nunconstrained fn get_msb(val: [u64; 6]) -> u32 {\n    let mut count = 0;\n    for i in 0..6 {\n        let v = val[(6 - 1) - i];\n        if (v > 0) {\n            count = 60 * ((6 - 1) - i);\n            break;\n        }\n    }\n    count\n}\n\nunconstrained fn shl(shift: u32) -> [u64; 6] {\n    let num_shifted_limbs = shift / 60;\n    let limb_shift = (shift % 60) as u8;\n\n    let mut result = [0; 6];\n    result[num_shifted_limbs] = (1 << limb_shift);\n\n    for i in 1..(6 - num_shifted_limbs) {\n        result[i + num_shifted_limbs] = 0;\n    }\n    result\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
